# ESP32-C6-Touch-LCD-Rust-Demo

./: Cargo.toml  README.md
.cargo/: config.toml
src/: ferris_bitmap.rs  main.rs
