[package]
name = "esp32-c6-touch-lcd-rust"
authors = ["Petr Gadorek <hahihula@gmail.com>"] 
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = ["esp32c6", "panic-handler", "exception-handler","println"] }
esp_hal = { version = "1.0.0-rc.0", package = "esp-hal" , features = [
   "esp32c6",
   "unstable"
]}
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
embedded-graphics = "0.8"
sh1106 = "0.5.0"
esp-alloc = "0.7.0"
esp-wifi = {version = "0.15.0", features = ["esp32c6","wifi","esp-now", "smoltcp"]}
heapless = { version = "0.8.0", default-features = false }
critical-section = "1.2.0"
esp-hal-embassy = { version = "0.9", features=["esp32c6"] }
embassy-executor    = { version = "0.7.0", features = ["task-arena-size-131072"] }
embassy-sync              = { version = "0.6.1" }
embassy-time              = { version = "0.4.0" }
embassy-time-driver       = { version = "0.2.0", features = [ "tick-hz-1_000_000" ] }
embassy-time-queue-utils  = { version = "0.1.0", features = ["_generic-queue"] }
smoltcp = { version = "0.12.0", default-features=false, features = [ "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
serde-json-core = "0.6"
mipidsi = "0.7"
display-interface = "0.4"
embedded-graphics-framebuf = "0.5"
embedded-hal-bus = "0.2"
embedded-hal = "1.0"
micromath = "2.0"
log = "0.4"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
axs5106l = "0.1"
ph-qmi8658 = "0.1"
